Test Sandbox Project/src/objects/Learning_Version__c.object
<CustomObject>
    <fields>
        <fullName>Learning_Content_ID__c</fullName>
        <formula>IF(
!ISBLANK(Task__c),
Task__c,
IF(!ISBLANK(Training_Resource__c),
Training_Resource__c,
IF(!ISBLANK(Quiz__c),
Quiz__c
,&quot;&quot;)
)
)</formula>
        <label>Learning Content ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Learning__c</fullName>
        <label>Learning</label>
        <referenceTo>Learning__c</referenceTo>
        <relationshipLabel>Learning Versions</relationshipLabel>
        <relationshipName>Learning_Versions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Quiz__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quiz</label>
        <referenceTo>Quiz__c</referenceTo>
        <relationshipLabel>Learning Versions</relationshipLabel>
        <relationshipName>Learning_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task</label>
        <referenceTo>Task__c</referenceTo>
        <relationshipLabel>Learning Versions</relationshipLabel>
        <relationshipName>Learning_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Resource</label>
        <referenceTo>Training_Resource__c</referenceTo>
        <relationshipLabel>Learning Versions</relationshipLabel>
        <relationshipName>Learning_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Preview</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Version_selection_behavior__c</fullName>
        <label>Version selection behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ask user for version selection</fullName>
                </value>
                <value>
                    <fullName>Update version on launch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Learning Version</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Learning__c</columns>
        <columns>Learning_Content_ID__c</columns>
        <columns>Quiz__c</columns>
        <columns>Task__c</columns>
        <columns>Training_Resource__c</columns>
        <columns>Type__c</columns>
        <columns>Version__c</columns>
        <columns>Version_selection_behavior__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LEV-{0000000}</displayFormat>
        <label>Learning Version ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>